--- a/Index.html
+++ b/Index.html
@@ -163,6 +163,56 @@
         "pins (48).png",
         "pins (49).png",
         "pins (50).png",
+        "deflections (1).png",
+        "deflections (2).png",
+        "deflections (3).png",
+        "deflections (4).png",
+        "deflections (5).png",
+        "deflections (6).png",
+        "deflections (7).png",
+        "deflections (8).png",
+        "deflections (9).png",
+        "deflections (10).png",
+        "deflections (11).png",
+        "deflections (12).png",
+        "deflections (13).png",
+        "deflections (14).png",
+        "deflections (15).png",
+        "deflections (16).png",
+        "deflections (17).png",
+        "deflections (18).png",
+        "deflections (19).png",
+        "deflections (20).png",
+        "deflections (21).png",
+        "deflections (22).png",
+        "deflections (23).png",
+        "deflections (24).png",
+        "deflections (25).png",
+        "deflections (26).png",
+        "deflections (27).png",
+        "deflections (28).png",
+        "deflections (29).png",
+        "deflections (30).png",
+        "deflections (31).png",
+        "deflections (32).png",
+        "deflections (33).png",
+        "deflections (34).png",
+        "deflections (35).png",
+        "deflections (36).png",
+        "deflections (37).png",
+        "deflections (38).png",
+        "deflections (39).png",
+        "deflections (40).png",
+        "deflections (41).png",
+        "deflections (42).png",
+        "deflections (43).png",
+        "deflections (44).png",
+        "deflections (45).png",
+        "deflections (46).png",
+        "deflections (47).png",
+        "deflections (48).png",
+        "deflections (49).png",
+        "deflections (50).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -265,6 +315,56 @@
         "pinsanswers (48).png",
         "pinsanswers (49).png",
         "pinsanswers (50).png",
+        "deflectionsanswers (1).png",
+        "deflectionsanswers (2).png",
+        "deflectionsanswers (3).png",
+        "deflectionsanswers (4).png",
+        "deflectionsanswers (5).png",
+        "deflectionsanswers (6).png",
+        "deflectionsanswers (7).png",
+        "deflectionsanswers (8).png",
+        "deflectionsanswers (9).png",
+        "deflectionsanswers (10).png",
+        "deflectionsanswers (11).png",
+        "deflectionsanswers (12).png",
+        "deflectionsanswers (13).png",
+        "deflectionsanswers (14).png",
+        "deflectionsanswers (15).png",
+        "deflectionsanswers (16).png",
+        "deflectionsanswers (17).png",
+        "deflectionsanswers (18).png",
+        "deflectionsanswers (19).png",
+        "deflectionsanswers (20).png",
+        "deflectionsanswers (21).png",
+        "deflectionsanswers (22).png",
+        "deflectionsanswers (23).png",
+        "deflectionsanswers (24).png",
+        "deflectionsanswers (25).png",
+        "deflectionsanswers (26).png",
+        "deflectionsanswers (27).png",
+        "deflectionsanswers (28).png",
+        "deflectionsanswers (29).png",
+        "deflectionsanswers (30).png",
+        "deflectionsanswers (31).png",
+        "deflectionsanswers (32).png",
+        "deflectionsanswers (33).png",
+        "deflectionsanswers (34).png",
+        "deflectionsanswers (35).png",
+        "deflectionsanswers (36).png",
+        "deflectionsanswers (37).png",
+        "deflectionsanswers (38).png",
+        "deflectionsanswers (39).png",
+        "deflectionsanswers (40).png",
+        "deflectionsanswers (41).png",
+        "deflectionsanswers (42).png",
+        "deflectionsanswers (43).png",
+        "deflectionsanswers (44).png",
+        "deflectionsanswers (45).png",
+        "deflectionsanswers (46).png",
+        "deflectionsanswers (47).png",
+        "deflectionsanswers (48).png",
+        "deflectionsanswers (49).png",
+        "deflectionsanswers (50).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
