--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,8 @@
 
 <body>
 	<a href="#" onclick="PrevFunction()"><</a>
-	<input type="number" id="number" name="number" min="1" max="1000" onkeypress="EnterFunction(event)">
+	<!-- <input type="number" id="number" name="number" min="1" max="1000" onkeypress="EnterFunction(event)"> -->
+    <input input pattern="[0-9]*" type="number" id="number" name="number" min="1" max="1000" onkeypress="EnterFunction(event)">
 	<a href="#" onclick="NextFunction()">></a>
 	<a href="#" onclick="RandFunction()">Random</a>
 	<br>
@@ -213,6 +214,31 @@
         "deflections (48).png",
         "deflections (49).png",
         "deflections (50).png",
+        "discoveries (1).png",
+        "discoveries (2).png",
+        "discoveries (3).png",
+        "discoveries (4).png",
+        "discoveries (5).png",
+        "discoveries (6).png",
+        "discoveries (7).png",
+        "discoveries (8).png",
+        "discoveries (9).png",
+        "discoveries (10).png",
+        "discoveries (11).png",
+        "discoveries (12).png",
+        "discoveries (13).png",
+        "discoveries (14).png",
+        "discoveries (15).png",
+        "discoveries (16).png",
+        "discoveries (17).png",
+        "discoveries (18).png",
+        "discoveries (19).png",
+        "discoveries (20).png",
+        "discoveries (21).png",
+        "discoveries (22).png",
+        "discoveries (23).png",
+        "discoveries (24).png",
+        "discoveries (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -365,6 +391,31 @@
         "deflectionsanswers (48).png",
         "deflectionsanswers (49).png",
         "deflectionsanswers (50).png",
+        "discoveriesanswers (1).png",
+        "discoveriesanswers (2).png",
+        "discoveriesanswers (3).png",
+        "discoveriesanswers (4).png",
+        "discoveriesanswers (5).png",
+        "discoveriesanswers (6).png",
+        "discoveriesanswers (7).png",
+        "discoveriesanswers (8).png",
+        "discoveriesanswers (9).png",
+        "discoveriesanswers (10).png",
+        "discoveriesanswers (11).png",
+        "discoveriesanswers (12).png",
+        "discoveriesanswers (13).png",
+        "discoveriesanswers (14).png",
+        "discoveriesanswers (15).png",
+        "discoveriesanswers (16).png",
+        "discoveriesanswers (17).png",
+        "discoveriesanswers (18).png",
+        "discoveriesanswers (19).png",
+        "discoveriesanswers (20).png",
+        "discoveriesanswers (21).png",
+        "discoveriesanswers (22).png",
+        "discoveriesanswers (23).png",
+        "discoveriesanswers (24).png",
+        "discoveriesanswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
