--- a/Index.html
+++ b/Index.html
@@ -264,6 +264,31 @@
         "doublechecks (23).png",
         "doublechecks (24).png",
         "doublechecks (25).png",
+        "skewers (1).png",
+        "skewers (2).png",
+        "skewers (3).png",
+        "skewers (4).png",
+        "skewers (5).png",
+        "skewers (6).png",
+        "skewers (7).png",
+        "skewers (8).png",
+        "skewers (9).png",
+        "skewers (10).png",
+        "skewers (11).png",
+        "skewers (12).png",
+        "skewers (13).png",
+        "skewers (14).png",
+        "skewers (15).png",
+        "skewers (16).png",
+        "skewers (17).png",
+        "skewers (18).png",
+        "skewers (19).png",
+        "skewers (20).png",
+        "skewers (21).png",
+        "skewers (22).png",
+        "skewers (23).png",
+        "skewers (24).png",
+        "skewers (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -466,6 +491,31 @@
         "doublechecksanswers (23).png",
         "doublechecksanswers (24).png",
         "doublechecksanswers (25).png",
+        "skewersanswers (1).png",
+        "skewersanswers (2).png",
+        "skewersanswers (3).png",
+        "skewersanswers (4).png",
+        "skewersanswers (5).png",
+        "skewersanswers (6).png",
+        "skewersanswers (7).png",
+        "skewersanswers (8).png",
+        "skewersanswers (9).png",
+        "skewersanswers (10).png",
+        "skewersanswers (11).png",
+        "skewersanswers (12).png",
+        "skewersanswers (13).png",
+        "skewersanswers (14).png",
+        "skewersanswers (15).png",
+        "skewersanswers (16).png",
+        "skewersanswers (17).png",
+        "skewersanswers (18).png",
+        "skewersanswers (19).png",
+        "skewersanswers (20).png",
+        "skewersanswers (21).png",
+        "skewersanswers (22).png",
+        "skewersanswers (23).png",
+        "skewersanswers (24).png",
+        "skewersanswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
