--- a/Index.html
+++ b/Index.html
@@ -289,6 +289,31 @@
         "skewers (23).png",
         "skewers (24).png",
         "skewers (25).png",
+        "trapping (1).png",
+        "trapping (2).png",
+        "trapping (3).png",
+        "trapping (4).png",
+        "trapping (5).png",
+        "trapping (6).png",
+        "trapping (7).png",
+        "trapping (8).png",
+        "trapping (9).png",
+        "trapping (10).png",
+        "trapping (11).png",
+        "trapping (12).png",
+        "trapping (13).png",
+        "trapping (14).png",
+        "trapping (15).png",
+        "trapping (16).png",
+        "trapping (17).png",
+        "trapping (18).png",
+        "trapping (19).png",
+        "trapping (20).png",
+        "trapping (21).png",
+        "trapping (22).png",
+        "trapping (23).png",
+        "trapping (24).png",
+        "trapping (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -516,6 +541,31 @@
         "skewersanswers (23).png",
         "skewersanswers (24).png",
         "skewersanswers (25).png",
+        "trappinganswers (1).png",
+        "trappinganswers (2).png",
+        "trappinganswers (3).png",
+        "trappinganswers (4).png",
+        "trappinganswers (5).png",
+        "trappinganswers (6).png",
+        "trappinganswers (7).png",
+        "trappinganswers (8).png",
+        "trappinganswers (9).png",
+        "trappinganswers (10).png",
+        "trappinganswers (11).png",
+        "trappinganswers (12).png",
+        "trappinganswers (13).png",
+        "trappinganswers (14).png",
+        "trappinganswers (15).png",
+        "trappinganswers (16).png",
+        "trappinganswers (17).png",
+        "trappinganswers (18).png",
+        "trappinganswers (19).png",
+        "trappinganswers (20).png",
+        "trappinganswers (21).png",
+        "trappinganswers (22).png",
+        "trappinganswers (23).png",
+        "trappinganswers (24).png",
+        "trappinganswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
