--- a/Index.html
+++ b/Index.html
@@ -314,6 +314,31 @@
         "trapping (23).png",
         "trapping (24).png",
         "trapping (25).png",
+        "decoys (1).png",
+        "decoys (2).png",
+        "decoys (3).png",
+        "decoys (4).png",
+        "decoys (5).png",
+        "decoys (6).png",
+        "decoys (7).png",
+        "decoys (8).png",
+        "decoys (9).png",
+        "decoys (10).png",
+        "decoys (11).png",
+        "decoys (12).png",
+        "decoys (13).png",
+        "decoys (14).png",
+        "decoys (15).png",
+        "decoys (16).png",
+        "decoys (17).png",
+        "decoys (18).png",
+        "decoys (19).png",
+        "decoys (20).png",
+        "decoys (21).png",
+        "decoys (22).png",
+        "decoys (23).png",
+        "decoys (24).png",
+        "decoys (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -566,6 +591,31 @@
         "trappinganswers (23).png",
         "trappinganswers (24).png",
         "trappinganswers (25).png",
+        "decoysanswers (1).png",
+        "decoysanswers (2).png",
+        "decoysanswers (3).png",
+        "decoysanswers (4).png",
+        "decoysanswers (5).png",
+        "decoysanswers (6).png",
+        "decoysanswers (7).png",
+        "decoysanswers (8).png",
+        "decoysanswers (9).png",
+        "decoysanswers (10).png",
+        "decoysanswers (11).png",
+        "decoysanswers (12).png",
+        "decoysanswers (13).png",
+        "decoysanswers (14).png",
+        "decoysanswers (15).png",
+        "decoysanswers (16).png",
+        "decoysanswers (17).png",
+        "decoysanswers (18).png",
+        "decoysanswers (19).png",
+        "decoysanswers (20).png",
+        "decoysanswers (21).png",
+        "decoysanswers (22).png",
+        "decoysanswers (23).png",
+        "decoysanswers (24).png",
+        "decoysanswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
