--- a/Index.html
+++ b/Index.html
@@ -339,6 +339,31 @@
         "decoys (23).png",
         "decoys (24).png",
         "decoys (25).png",
+        "inter (1).png",
+        "inter (2).png",
+        "inter (3).png",
+        "inter (4).png",
+        "inter (5).png",
+        "inter (6).png",
+        "inter (7).png",
+        "inter (8).png",
+        "inter (9).png",
+        "inter (10).png",
+        "inter (11).png",
+        "inter (12).png",
+        "inter (13).png",
+        "inter (14).png",
+        "inter (15).png",
+        "inter (16).png",
+        "inter (17).png",
+        "inter (18).png",
+        "inter (19).png",
+        "inter (20).png",
+        "inter (21).png",
+        "inter (22).png",
+        "inter (23).png",
+        "inter (24).png",
+        "inter (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -616,6 +641,31 @@
         "decoysanswers (23).png",
         "decoysanswers (24).png",
         "decoysanswers (25).png",
+        "interanswers (1).png",
+        "interanswers (2).png",
+        "interanswers (3).png",
+        "interanswers (4).png",
+        "interanswers (5).png",
+        "interanswers (6).png",
+        "interanswers (7).png",
+        "interanswers (8).png",
+        "interanswers (9).png",
+        "interanswers (10).png",
+        "interanswers (11).png",
+        "interanswers (12).png",
+        "interanswers (13).png",
+        "interanswers (14).png",
+        "interanswers (15).png",
+        "interanswers (16).png",
+        "interanswers (17).png",
+        "interanswers (18).png",
+        "interanswers (19).png",
+        "interanswers (20).png",
+        "interanswers (21).png",
+        "interanswers (22).png",
+        "interanswers (23).png",
+        "interanswers (24).png",
+        "interanswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
