--- a/Index.html
+++ b/Index.html
@@ -364,6 +364,31 @@
         "inter (23).png",
         "inter (24).png",
         "inter (25).png",
+        "pawn (1).png",
+        "pawn (2).png",
+        "pawn (3).png",
+        "pawn (4).png",
+        "pawn (5).png",
+        "pawn (6).png",
+        "pawn (7).png",
+        "pawn (8).png",
+        "pawn (9).png",
+        "pawn (10).png",
+        "pawn (11).png",
+        "pawn (12).png",
+        "pawn (13).png",
+        "pawn (14).png",
+        "pawn (15).png",
+        "pawn (16).png",
+        "pawn (17).png",
+        "pawn (18).png",
+        "pawn (19).png",
+        "pawn (20).png",
+        "pawn (21).png",
+        "pawn (22).png",
+        "pawn (23).png",
+        "pawn (24).png",
+        "pawn (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -666,6 +691,31 @@
         "interanswers (23).png",
         "interanswers (24).png",
         "interanswers (25).png",
+        "pawnanswers (1).png",
+        "pawnanswers (2).png",
+        "pawnanswers (3).png",
+        "pawnanswers (4).png",
+        "pawnanswers (5).png",
+        "pawnanswers (6).png",
+        "pawnanswers (7).png",
+        "pawnanswers (8).png",
+        "pawnanswers (9).png",
+        "pawnanswers (10).png",
+        "pawnanswers (11).png",
+        "pawnanswers (12).png",
+        "pawnanswers (13).png",
+        "pawnanswers (14).png",
+        "pawnanswers (15).png",
+        "pawnanswers (16).png",
+        "pawnanswers (17).png",
+        "pawnanswers (18).png",
+        "pawnanswers (19).png",
+        "pawnanswers (20).png",
+        "pawnanswers (21).png",
+        "pawnanswers (22).png",
+        "pawnanswers (23).png",
+        "pawnanswers (24).png",
+        "pawnanswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
