--- a/Index.html
+++ b/Index.html
@@ -389,6 +389,31 @@
         "pawn (23).png",
         "pawn (24).png",
         "pawn (25).png",
+        "backrank (1).png",
+        "backrank (2).png",
+        "backrank (3).png",
+        "backrank (4).png",
+        "backrank (5).png",
+        "backrank (6).png",
+        "backrank (7).png",
+        "backrank (8).png",
+        "backrank (9).png",
+        "backrank (10).png",
+        "backrank (11).png",
+        "backrank (12).png",
+        "backrank (13).png",
+        "backrank (14).png",
+        "backrank (15).png",
+        "backrank (16).png",
+        "backrank (17).png",
+        "backrank (18).png",
+        "backrank (19).png",
+        "backrank (20).png",
+        "backrank (21).png",
+        "backrank (22).png",
+        "backrank (23).png",
+        "backrank (24).png",
+        "backrank (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -716,6 +741,31 @@
         "pawnanswers (23).png",
         "pawnanswers (24).png",
         "pawnanswers (25).png",
+        "backrankanswers (1).png",
+        "backrankanswers (2).png",
+        "backrankanswers (3).png",
+        "backrankanswers (4).png",
+        "backrankanswers (5).png",
+        "backrankanswers (6).png",
+        "backrankanswers (7).png",
+        "backrankanswers (8).png",
+        "backrankanswers (9).png",
+        "backrankanswers (10).png",
+        "backrankanswers (11).png",
+        "backrankanswers (12).png",
+        "backrankanswers (13).png",
+        "backrankanswers (14).png",
+        "backrankanswers (15).png",
+        "backrankanswers (16).png",
+        "backrankanswers (17).png",
+        "backrankanswers (18).png",
+        "backrankanswers (19).png",
+        "backrankanswers (20).png",
+        "backrankanswers (21).png",
+        "backrankanswers (22).png",
+        "backrankanswers (23).png",
+        "backrankanswers (24).png",
+        "backrankanswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
