--- a/Index.html
+++ b/Index.html
@@ -414,6 +414,31 @@
         "backrank (23).png",
         "backrank (24).png",
         "backrank (25).png",
+        "destroy (1).png",
+        "destroy (2).png",
+        "destroy (3).png",
+        "destroy (4).png",
+        "destroy (5).png",
+        "destroy (6).png",
+        "destroy (7).png",
+        "destroy (8).png",
+        "destroy (9).png",
+        "destroy (10).png",
+        "destroy (11).png",
+        "destroy (12).png",
+        "destroy (13).png",
+        "destroy (14).png",
+        "destroy (15).png",
+        "destroy (16).png",
+        "destroy (17).png",
+        "destroy (18).png",
+        "destroy (19).png",
+        "destroy (20).png",
+        "destroy (21).png",
+        "destroy (22).png",
+        "destroy (23).png",
+        "destroy (24).png",
+        "destroy (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -766,6 +791,31 @@
         "backrankanswers (23).png",
         "backrankanswers (24).png",
         "backrankanswers (25).png",
+        "destroyanswers (1).png",
+        "destroyanswers (2).png",
+        "destroyanswers (3).png",
+        "destroyanswers (4).png",
+        "destroyanswers (5).png",
+        "destroyanswers (6).png",
+        "destroyanswers (7).png",
+        "destroyanswers (8).png",
+        "destroyanswers (9).png",
+        "destroyanswers (10).png",
+        "destroyanswers (11).png",
+        "destroyanswers (12).png",
+        "destroyanswers (13).png",
+        "destroyanswers (14).png",
+        "destroyanswers (15).png",
+        "destroyanswers (16).png",
+        "destroyanswers (17).png",
+        "destroyanswers (18).png",
+        "destroyanswers (19).png",
+        "destroyanswers (20).png",
+        "destroyanswers (21).png",
+        "destroyanswers (22).png",
+        "destroyanswers (23).png",
+        "destroyanswers (24).png",
+        "destroyanswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
