--- a/Index.html
+++ b/Index.html
@@ -439,6 +439,31 @@
         "destroy (23).png",
         "destroy (24).png",
         "destroy (25).png",
+        "chase (1).png",
+        "chase (2).png",
+        "chase (3).png",
+        "chase (4).png",
+        "chase (5).png",
+        "chase (6).png",
+        "chase (7).png",
+        "chase (8).png",
+        "chase (9).png",
+        "chase (10).png",
+        "chase (11).png",
+        "chase (12).png",
+        "chase (13).png",
+        "chase (14).png",
+        "chase (15).png",
+        "chase (16).png",
+        "chase (17).png",
+        "chase (18).png",
+        "chase (19).png",
+        "chase (20).png",
+        "chase (21).png",
+        "chase (22).png",
+        "chase (23).png",
+        "chase (24).png",
+        "chase (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -816,6 +841,31 @@
         "destroyanswers (23).png",
         "destroyanswers (24).png",
         "destroyanswers (25).png",
+        "chaseanswers (1).png",
+        "chaseanswers (2).png",
+        "chaseanswers (3).png",
+        "chaseanswers (4).png",
+        "chaseanswers (5).png",
+        "chaseanswers (6).png",
+        "chaseanswers (7).png",
+        "chaseanswers (8).png",
+        "chaseanswers (9).png",
+        "chaseanswers (10).png",
+        "chaseanswers (11).png",
+        "chaseanswers (12).png",
+        "chaseanswers (13).png",
+        "chaseanswers (14).png",
+        "chaseanswers (15).png",
+        "chaseanswers (16).png",
+        "chaseanswers (17).png",
+        "chaseanswers (18).png",
+        "chaseanswers (19).png",
+        "chaseanswers (20).png",
+        "chaseanswers (21).png",
+        "chaseanswers (22).png",
+        "chaseanswers (23).png",
+        "chaseanswers (24).png",
+        "chaseanswers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
