--- a/Index.html
+++ b/Index.html
@@ -464,6 +464,31 @@
         "chase (23).png",
         "chase (24).png",
         "chase (25).png",
+        "mate2 (1).png",
+        "mate2 (2).png",
+        "mate2 (3).png",
+        "mate2 (4).png",
+        "mate2 (5).png",
+        "mate2 (6).png",
+        "mate2 (7).png",
+        "mate2 (8).png",
+        "mate2 (9).png",
+        "mate2 (10).png",
+        "mate2 (11).png",
+        "mate2 (12).png",
+        "mate2 (13).png",
+        "mate2 (14).png",
+        "mate2 (15).png",
+        "mate2 (16).png",
+        "mate2 (17).png",
+        "mate2 (18).png",
+        "mate2 (19).png",
+        "mate2 (20).png",
+        "mate2 (21).png",
+        "mate2 (22).png",
+        "mate2 (23).png",
+        "mate2 (24).png",
+        "mate2 (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -866,6 +891,31 @@
         "chaseanswers (23).png",
         "chaseanswers (24).png",
         "chaseanswers (25).png",
+        "mate2answers (1).png",
+        "mate2answers (2).png",
+        "mate2answers (3).png",
+        "mate2answers (4).png",
+        "mate2answers (5).png",
+        "mate2answers (6).png",
+        "mate2answers (7).png",
+        "mate2answers (8).png",
+        "mate2answers (9).png",
+        "mate2answers (10).png",
+        "mate2answers (11).png",
+        "mate2answers (12).png",
+        "mate2answers (13).png",
+        "mate2answers (14).png",
+        "mate2answers (15).png",
+        "mate2answers (16).png",
+        "mate2answers (17).png",
+        "mate2answers (18).png",
+        "mate2answers (19).png",
+        "mate2answers (20).png",
+        "mate2answers (21).png",
+        "mate2answers (22).png",
+        "mate2answers (23).png",
+        "mate2answers (24).png",
+        "mate2answers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
