--- a/Index.html
+++ b/Index.html
@@ -489,6 +489,31 @@
         "mate2 (23).png",
         "mate2 (24).png",
         "mate2 (25).png",
+        "mate3 (1).png",
+        "mate3 (2).png",
+        "mate3 (3).png",
+        "mate3 (4).png",
+        "mate3 (5).png",
+        "mate3 (6).png",
+        "mate3 (7).png",
+        "mate3 (8).png",
+        "mate3 (9).png",
+        "mate3 (10).png",
+        "mate3 (11).png",
+        "mate3 (12).png",
+        "mate3 (13).png",
+        "mate3 (14).png",
+        "mate3 (15).png",
+        "mate3 (16).png",
+        "mate3 (17).png",
+        "mate3 (18).png",
+        "mate3 (19).png",
+        "mate3 (20).png",
+        "mate3 (21).png",
+        "mate3 (22).png",
+        "mate3 (23).png",
+        "mate3 (24).png",
+        "mate3 (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -916,6 +941,31 @@
         "mate2answers (23).png",
         "mate2answers (24).png",
         "mate2answers (25).png",
+        "mate3answers (1).png",
+        "mate3answers (2).png",
+        "mate3answers (3).png",
+        "mate3answers (4).png",
+        "mate3answers (5).png",
+        "mate3answers (6).png",
+        "mate3answers (7).png",
+        "mate3answers (8).png",
+        "mate3answers (9).png",
+        "mate3answers (10).png",
+        "mate3answers (11).png",
+        "mate3answers (12).png",
+        "mate3answers (13).png",
+        "mate3answers (14).png",
+        "mate3answers (15).png",
+        "mate3answers (16).png",
+        "mate3answers (17).png",
+        "mate3answers (18).png",
+        "mate3answers (19).png",
+        "mate3answers (20).png",
+        "mate3answers (21).png",
+        "mate3answers (22).png",
+        "mate3answers (23).png",
+        "mate3answers (24).png",
+        "mate3answers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
