--- a/Index.html
+++ b/Index.html
@@ -514,6 +514,31 @@
         "mate3 (23).png",
         "mate3 (24).png",
         "mate3 (25).png",
+        "mate4 (1).png",
+        "mate4 (2).png",
+        "mate4 (3).png",
+        "mate4 (4).png",
+        "mate4 (5).png",
+        "mate4 (6).png",
+        "mate4 (7).png",
+        "mate4 (8).png",
+        "mate4 (9).png",
+        "mate4 (10).png",
+        "mate4 (11).png",
+        "mate4 (12).png",
+        "mate4 (13).png",
+        "mate4 (14).png",
+        "mate4 (15).png",
+        "mate4 (16).png",
+        "mate4 (17).png",
+        "mate4 (18).png",
+        "mate4 (19).png",
+        "mate4 (20).png",
+        "mate4 (21).png",
+        "mate4 (22).png",
+        "mate4 (23).png",
+        "mate4 (24).png",
+        "mate4 (25).png",
 		]
 	var answers = [
         "forksanswers (1).png",
@@ -966,6 +991,31 @@
         "mate3answers (23).png",
         "mate3answers (24).png",
         "mate3answers (25).png",
+        "mate4answers (1).png",
+        "mate4answers (2).png",
+        "mate4answers (3).png",
+        "mate4answers (4).png",
+        "mate4answers (5).png",
+        "mate4answers (6).png",
+        "mate4answers (7).png",
+        "mate4answers (8).png",
+        "mate4answers (9).png",
+        "mate4answers (10).png",
+        "mate4answers (11).png",
+        "mate4answers (12).png",
+        "mate4answers (13).png",
+        "mate4answers (14).png",
+        "mate4answers (15).png",
+        "mate4answers (16).png",
+        "mate4answers (17).png",
+        "mate4answers (18).png",
+        "mate4answers (19).png",
+        "mate4answers (20).png",
+        "mate4answers (21).png",
+        "mate4answers (22).png",
+        "mate4answers (23).png",
+        "mate4answers (24).png",
+        "mate4answers (25).png",
 		]
 	document.getElementById("number").value = numero;
 	document.getElementById("number").max = boards.length;
